--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
 }
 
@@ -73,4 +74,8 @@ dependencies {
 
     // splash screen
     implementation 'androidx.core:core-splashscreen:1.0.0'
+
+    // koin
+    implementation "io.insert-koin:koin-android:3.3.0"
+    implementation "io.insert-koin:koin-androidx-navigation:3.3.0"
 }
