--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
+            android:theme="@style/Theme.App.Starting"
             android:parentActivityName="br.com.mypersonalfinances.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
